# real-time-accent-translator

./: domain.yml  main.py  pyproject.toml
actions/: actions.py
data/: nlu.yml  stories.yml
