[tool.poetry]
name = "nlpakdeniz"
version = "0.1.0"
description = ""
authors = ["utkusaglm <saglmutku@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
rasa = "^2.8.2"
SpeechRecognition = "^3.8.1"
gTTS = "^2.2.3"
ipdb = "^0.13.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
